Have a default fixed height for the panel body. Someone can implement resizing later. This is useful so that the editor doesn't jump around as you are typing at the end of the file. Requested by @Ptival

--- a/styles/atomts-main-panel-view.less
+++ b/styles/atomts-main-panel-view.less
@@ -1,5 +1,5 @@
-.atomts-panel-body{
-    max-height: 170px;
+.atomts-panel-body {
+    height: 170px;
     scroll-y: auto;
 }
 
